...
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/inputUser"
        app:layout_constraintStart_toStartOf="@+id/inputUser"
        app:layout_constraintTop_toBottomOf="@+id/inputUser" />

    <Button
        android:id="@+id/buttonlogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Login"
        app:layout_constraintEnd_toEndOf="@+id/inputPassword"
        app:layout_constraintStart_toStartOf="@+id/inputPassword"
...
